added option to disable ssl verification for S3 connections

--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -496,6 +496,10 @@
     </div>
     <hr>
 
+    {% include 'binary-setting.html' with {'label': 'S3 verify SSL certificates (disable only for HTTP. This is insecure!)'|trans, 'slug': 's3_verify_cert'} %}
+
+    <hr>
+
   </div>
 </div>
 
