improve error handling for api calls, make steps deadline interface
better

--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -48,20 +48,22 @@
                   {{ 'Deadline:'|trans }}
                   {% if step.deadline %}
                   {# here the data-ma-input-value is formatted so it works with the datetime-local input type, and the displayed one is formatted differently to be more readable #}
-                  <span data-stepid='{{ step.id }}' data-target='deadline' data-ma-type='datetime-local' data-ma-input-value='{{ step.deadline|date('Y-m-d\\TH:i') }}' class='step editable hl-hover'>{{ step.deadline|format_datetime() }}</span>
+                  <span data-stepid='{{ step.id }}' data-target='deadline' data-ma-type='datetime-local' data-ma-input-value='{{ step.deadline|date('Y-m-d\\TH:i') }}' class='step editable hl-hover-gray p-1 rounded'>{{ step.deadline|format_datetime() }}</span>
                   {# notification bell is only shown if the user has at least one notification setting activated for that type of notif #}
                   {% if App.Users.userData.notif_step_deadline or App.Users.userData.notif_step_deadline_email %}
-                    <span class='ml-2' data-action='step-toggle-deadline-notif' data-stepid='{{ step.id }}' title='{{ 'Toggle notifications'|trans }}'><i class='far fa-bell {{ step.deadline_notif ? 'active' }}' ></i></span>
+                    <span class='ml-2 hl-hover-gray p-1 rounded' data-action='step-toggle-deadline-notif' data-stepid='{{ step.id }}' title='{{ 'Toggle notifications'|trans }}'><i class='far fa-bell {{ step.deadline_notif ? 'active' }}' ></i></span>
                   {% endif %}
-                  <span class='ml-2' data-action='step-destroy-deadline' data-stepid='{{ step.id }}' title='{{ 'Clear deadline'|trans }}'><i class='fas fa-trash-alt' ></i></span>
+                  <span class='ml-2 hl-hover-gray p-1 rounded' data-action='step-destroy-deadline' data-stepid='{{ step.id }}' title='{{ 'Clear deadline'|trans }}'><i class='fas fa-trash-alt' ></i></span>
                   {% else %}
                   <span data-action='replace-with-next' title='{{ 'Add deadline'|trans }}'><i class='fas fa-plus-circle'></i></span>
                   <div hidden>
-                    <select class='form-control-inline' id='stepSelectDeadline_{{ step.id }}'>
+                    <select class='form-control col-md-3' id='stepSelectDeadline_{{ step.id }}'>
                       <option disabled>{{ 'Set deadline in'|trans }}</option>
-                      <option value='{{ '+1 hour'|toDatetime }}'>1 hour</option>
-                      <option value='{{ '+1 day'|toDatetime }}'>1 day</option>
-                      <option value='{{ '+1 week'|toDatetime }}'>1 week</option>
+                      <option value='{{ '+1 hour'|toDatetime }}'>{{ '%d hour'|trans|format(1) }}</option>
+                      <option value='{{ '+1 day'|toDatetime }}'>{{ '%d day'|trans|format(1) }}</option>
+                      <option value='{{ '+1 week'|toDatetime }}'>{{ '%d week'|trans|format(1) }}</option>
+                      <option value='{{ '+1 month'|toDatetime }}'>{{ '%d month'|trans|format(1) }}</option>
+                      <option value='{{ '+1 year'|toDatetime }}'>{{ '%d year'|trans|format(1) }}</option>
                     </select>
                     <button class='btn btn-primary' data-action='step-update-deadline' data-stepid='{{ step.id }}'>{{ 'Save'|trans }}</button>
                   </div>
