--- a/src/templates/permissions-edit-modal.html
+++ b/src/templates/permissions-edit-modal.html
@@ -24,7 +24,7 @@
           <label for='{{ rw }}_select_teams'>{{ 'Teams'|trans }}</label> <p class='smallgray d-inline'>{{ '(hold %sctrl%s key to select multiple entries)'|trans|format('<kbd>', '</kbd>')|raw }}</p>
           <p class='smallgray'>{{ 'Selecting a team here will give access to all members of this team.'|trans }}</p>
           <select id='{{ rw }}_select_teams' multiple class='form-control' autocomplete='off'>
-            {% for team in teamsArr %}
+            {% for team in teamsArr|filter(t => t.visible == '1') %}
               <option value='team:{{ team.id }}'
               {{ Entity.entityData[rw]|isInJsonArray('teams', team.id) ? ' selected' }}
               >{{ 'Team'|trans }} - {{ team.name }}</option>
