--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -79,11 +79,12 @@
 
         </div>
 
-        <!-- SEARCH BAR -->
-        <form class='nav-item form-inline ml-auto' method='get' action='{{ scriptName }}'>
-            {% if scriptName == 'experiments.php' or scriptName == 'database.php' %}
-            <input class='form-control big-search' type='search' name='q' aria-label='Search' size='20' value='{{ App.Request.query.get('q') }}' />
-            {% endif %}
+        {# SEARCH BAR #}
+        {# search in experiments everywhere, or in database on database page #}
+        {% set actionPage = (scriptName == 'experiments.php' or scriptName == 'database.php') ? scriptName : 'experiments.php' %}
+        <form class='nav-item form-inline ml-auto' method='get' action='{{ actionPage }}'>
+          {# the id is for making it easy to find the element when focusing it with the keyboard shortcut #}
+          <input id='quicksearchInput' class='form-control big-search' type='search' name='q' aria-label='Search' size='20' value='{{ App.Request.query.get('q') }}' />
         </form>
 
         <!-- Notification bell -->
