--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -94,6 +94,7 @@
         <th>{{ 'Edit'|trans }}</th>
         <th>{{ 'Submit'|trans }}</th>
         <th>{{ 'TODO list'|trans }}</th>
+        <th>{{ 'Search'|trans }}</th>
       </tr>
       </thead>
       <tbody class='bgnd-transparent'>
@@ -113,6 +114,10 @@
 
         <td>
           <input class='form-control col-md-2' type='text' pattern='[a-z]' size='1' maxlength='1' value='{{ App.Users.userData.sc_todo }}' data-trigger='blur' data-model='users/me' data-target='sc_todo' />
+        </td>
+
+        <td>
+          <input class='form-control col-md-2' type='text' pattern='[a-z]' size='1' maxlength='1' value='{{ App.Users.userData.sc_search }}' data-trigger='blur' data-model='users/me' data-target='sc_search' />
         </td>
       </tr>
       </tbody>
