add option to disable S3 TLS certificate verification (#4278)
fix #4259

--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -496,6 +496,7 @@
     </div>
     <hr>
 
+    {% include 'binary-setting.html' with {'label': 'Verify TLS certificate'|trans, 'slug': 's3_verify_cert'} %}
   </div>
 </div>
 
