--- a/src/templates/show-item.html
+++ b/src/templates/show-item.html
@@ -2,7 +2,7 @@
 {% set randomId = random() %}
 {% set owner = '' %}
 {% if (Entity.Users.userData.userid != item.userid) and not App.Session.has('is_anon') %}
-  {% set owner = "%s <a href='?owner=%s'>%s</a>"|trans|format('by', item.userid, item.fullname) %}
+  {% set owner = "%s <a href='?owner=%s'>%s</a>"|format('by'|trans, item.userid, item.fullname) %}
 {% endif %}
 
 <section class='item pl-3 d-flex' id='parent_{{ randomId }}' style='--left-color: #{{ item.color }};'>
