fix some translations

--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -101,23 +101,23 @@
       <tr>
         <td>{{ 'Shortcut'|trans }}</td>
         <td>
-          <input class='form-control col-md-2' type='text' pattern='[a-z]' size='1' maxlength='1' value='{{ App.Users.userData.sc_create }}' data-trigger='blur' data-model='users/me' data-target='sc_create' />
+          <input class='form-control col-md-2 p-1 text-center' type='text' pattern='[a-z]' size='1' maxlength='1' value='{{ App.Users.userData.sc_create }}' data-trigger='blur' data-model='users/me' data-target='sc_create' />
         </td>
 
         <td>
-          <input class='form-control col-md-2' type='text' pattern='[a-z]' size='1' maxlength='1' value='{{ App.Users.userData.sc_edit }}' data-trigger='blur' data-model='users/me' data-target='sc_edit' />
+          <input class='form-control col-md-2 p-1 text-center' type='text' pattern='[a-z]' size='1' maxlength='1' value='{{ App.Users.userData.sc_edit }}' data-trigger='blur' data-model='users/me' data-target='sc_edit' />
         </td>
 
         <td>
-          <input class='form-control col-md-2' type='text' pattern='[a-z]' size='1' maxlength='1' value='{{ App.Users.userData.sc_favorite }}' data-trigger='blur' data-model='users/me' data-target='sc_favorite' />
+          <input class='form-control col-md-2 p-1 text-center' type='text' pattern='[a-z]' size='1' maxlength='1' value='{{ App.Users.userData.sc_favorite }}' data-trigger='blur' data-model='users/me' data-target='sc_favorite' />
         </td>
 
         <td>
-          <input class='form-control col-md-2' type='text' pattern='[a-z]' size='1' maxlength='1' value='{{ App.Users.userData.sc_todo }}' data-trigger='blur' data-model='users/me' data-target='sc_todo' />
+          <input class='form-control col-md-2 p-1 text-center' type='text' pattern='[a-z]' size='1' maxlength='1' value='{{ App.Users.userData.sc_todo }}' data-trigger='blur' data-model='users/me' data-target='sc_todo' />
         </td>
 
         <td>
-          <input class='form-control col-md-2' type='text' pattern='[a-z]' size='1' maxlength='1' value='{{ App.Users.userData.sc_search }}' data-trigger='blur' data-model='users/me' data-target='sc_search' />
+          <input class='form-control col-md-2 p-1 text-center' type='text' pattern='[a-z]' size='1' maxlength='1' value='{{ App.Users.userData.sc_search }}' data-trigger='blur' data-model='users/me' data-target='sc_search' />
         </td>
       </tr>
       </tbody>
