make the default experiments permissions settings on ucp work with full options

--- a/src/templates/permissions-edit-modal.html
+++ b/src/templates/permissions-edit-modal.html
@@ -1,4 +1,10 @@
 {# required vars: rw visibilityArr teamsArr myTeamgroupsArr usersArr #}
+{% if ucpPage %}{# set this to true on ucp page #}
+  {% set column = rw == 'canread' ? 'default_read' : 'default_write' %}
+  {% set permissionsJson = App.Users.userData[column] %}
+{% else %}
+  {% set permissionsJson = Entity.entityData[rw] %}
+{% endif %}
 <!-- Modal for permission edit -->
 <div class='modal fade' id='permModal-{{ rw }}' tabindex='-1' role='dialog' aria-labelledby='permModalLabel_{{ rw }}' aria-hidden='true'>
   <div class='modal-dialog modal-lg' role='document'>
@@ -16,7 +22,7 @@
           <select id='{{ rw }}_select_base' class='form-control'>
             {% for key, value in visibilityArr %}
               <option value='{{ key }}'
-              {{ Entity.entityData[rw]|extractJson('base') == key ? ' selected' }}
+              {{ permissionsJson|extractJson('base') == key ? ' selected' }}
               >{{ value|trans }}</option>
             {% endfor %}
           </select>
@@ -26,7 +32,7 @@
           <select id='{{ rw }}_select_teams' multiple class='form-control' autocomplete='off'>
             {% for team in teamsArr|filter(t => t.visible == '1') %}
               <option value='team:{{ team.id }}'
-              {{ Entity.entityData[rw]|isInJsonArray('teams', team.id) ? ' selected' }}
+              {{ permissionsJson|isInJsonArray('teams', team.id) ? ' selected' }}
               >{{ 'Team'|trans }} - {{ team.name }}</option>
             {% endfor %}
           </select>
@@ -36,14 +42,14 @@
           <select id='{{ rw }}_select_teamgroups' multiple class='form-control' autocomplete='off'>
             {% for tg in myTeamgroupsArr %}
               <option value='teamgroup:{{ tg.id }}'
-              {{ Entity.entityData[rw]|isInJsonArray('teamgroups', tg.id) == ('teamgroup:' ~ tg.id) ? ' selected' }}
+              {{ permissionsJson|isInJsonArray('teamgroups', tg.id) == ('teamgroup:' ~ tg.id) ? ' selected' }}
                       >{{ 'Teamgroup'|trans }} - {{ tg.name }}</option>
             {% endfor %}
           </select>
           <!-- USERS -->
           <label for='{{ rw }}_select_users'>{{ 'Users'|trans }}</label> <p class='smallgray d-inline'>{{ 'Allow individual users to access this entry.' }}</p>
           <ul class='list-group mb-1' id='{{ rw }}_list_users'>
-            {% set humanCan = Entity.entityData[rw]|canToHuman %}
+            {% set humanCan = permissionsJson|canToHuman %}
             {% for user in humanCan.users %}
               <li class='list-group-item w-100' data-id='{{ user.userid }}'>
                 <i class='fas fa-{{ rw == 'canread' ? 'eye' : 'pencil-alt' }}'></i> {{ user.fullname }} ({{ user.email }}) <span data-action='remove-parent' class='hover-danger'><i class='fas fa-xmark'></i></span>
@@ -58,7 +64,7 @@
             </div>
           </div>
         </div>
-        {% if rw == 'canread' and App.Config.configArr.anon_users %}
+        {% if rw == 'canread' and App.Config.configArr.anon_users and not ucpPage %}
           <hr>
           <div class='custom-control custom-checkbox'>
             <input type='checkbox' class='custom-control-input' id='readAccessCheckbox' data-action='toggle-anonymous-access' autocomplete='off' {{ Entity.entityData.access_key ? 'checked' }}>
