--- a/src/templates/view-permissions.html
+++ b/src/templates/view-permissions.html
@@ -7,33 +7,4 @@
   </div>
 {% endif %}
 <div class='vertical-separator mx-3'></div>
-<div id='{{ rw }}Div'>
-  {{ can.base }}
-  {% if can.teams %}
-    <details><summary>{{ 'Teams'|trans }}</summary>
-      <ul>
-      {% for team in can.teams %}
-        <li>{{ team.name }}</li>
-      {% endfor %}
-      </ul>
-    </details>
-  {% endif %}
-  {% if can.teamgroups %}
-    <details><summary>{{ 'Groups'|trans }}</summary>
-      <ul>
-      {% for group in can.teamgroups %}
-        <li>{{ group.name }}</li>
-      {% endfor %}
-      </ul>
-    </details>
-  {% endif %}
-  {% if can.users %}
-    <details><summary>{{ 'Users'|trans }}</summary>
-      <ul>
-      {% for user in can.users %}
-        <li>{{ user.fullname }}</li>
-      {% endfor %}
-      </ul>
-    </details>
-  {% endif %}
-</div>
+{% include('view-permissions-details.html') %}
