fix pinned entries being displayed on one line

--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -235,7 +235,7 @@
 
       <!-- PINNED ENTITIES -->
       {% if pinnedArr and not searchPage %}
-        <div id='pinned-entities' class='d-flex'>
+        <div id='pinned-entities' class='d-flex flex-column'>
           {% set isPinned = true %}
           {% for item in pinnedArr|slice(0, DisplayParams.limit) %}
             {% include 'show-item.html' %}
