--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -165,15 +165,24 @@
 
 <!-- TAB 4 EMAIL -->
 <div data-tabcontent='4' hidden>
-  <h3 class='p-2 pl-3 mb-3 section-title'><i class='fas fa-envelope'></i> {{ 'Send an email to all team members'|trans }}</h3>
-  <form class='pl-3' id='emailTeamForm' method='post' action='app/controllers/TeamController.php'>
+  <h3 class='p-2 pl-3 mb-3 section-title'><i class='fas fa-envelope'></i> {{ 'Send an email to users'|trans }}</h3>
+  <form class='pl-3' method='post' action='app/controllers/TeamController.php'>
     {{ App.Session.get('csrf')|csrf }}
-    <input type='hidden' name='emailTeam' />
+    <input type='hidden' name='emailUsers' />
+    <label>{{ 'Send to'|trans }}</label>
+    <div class='form-check'>
+      <input class='form-check-input' type='radio' name='target' value='team' id='targetTeam' checked> <label class='form-check-label' for='targetTeam'>{{ 'Members of team %s'|trans|format(App.teamArr.name|raw) }}</label>
+    </div>
+    {% for teamgroup in teamGroupsArr %}
+      <div class='form-check'>
+        <input class='form-check-input' type='radio' name='target' value='teamgroup_{{ teamgroup.id }}' id='targetTeamgroup_{{ teamgroup.id }}'> <label class='form-check-label' for='targetTeamgroup_{{ teamgroup.id }}'>{{ 'Members of teamgroup %s'|trans|format(teamgroup.name|raw) }}</label>
+      </div>
+    {% endfor %}
     <div class='form-group'>
       <label for='emailSubject'>{{ 'Subject'|trans }}</label>
       <input type='text' id='emailSubject' name='subject' class='form-control' required />
       <label for='emailBody'>{{ 'Content'|trans }}</label>
-      <textarea form='emailTeamForm' id='emailBody' name='body' class='form-control' rows='10' required></textarea>
+      <textarea id='emailBody' name='body' class='form-control' rows='10' required></textarea>
     </div>
     <div class='mt-4 text-center'>
       <button type='submit' class='btn btn-primary'>{{ 'Send'|trans }}</button>
