--- a/src/templates/show-item.html
+++ b/src/templates/show-item.html
@@ -47,7 +47,7 @@
         <i style='color:#{{ item.color }}' class='far fa-calendar-check fa-fw'></i>
       {% endif %}
       {# category #}
-      <span class='item-category'><a style='color:#{{ item.color }}' href='?cat={{ item.category_id }}'>{{ item.category }}</a></span>
+      <span class='item-category'><a style='color:#{{ item.color }}' href='?cat={{ item.category_id }}'>{{ item.category|raw }}</a></span>
     </div>
     {# end first line #}
 
