remove unused data attribute

--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -115,7 +115,7 @@
                         <i class='fas fa-plus-circle'></i>
                       </span>
                       {% if mode != 'edit-template' %}
-                        <a data-action='import-links' data-endpoint='experiments_links' data-target='{{ link.itemid }}' title='{{ 'Import links'|trans }}'>
+                        <a data-action='import-links' data-target='{{ link.itemid }}' title='{{ 'Import links'|trans }}'>
                           <i class='fas fa-arrows-down-to-line'></i>
                         </a>
 
@@ -178,7 +178,7 @@
                       <i class='fas fa-plus-circle'></i>
                     </span>
                     {% if mode != 'edit-template' %}
-                      <a data-action='import-links' data-endpoint='items_links' data-target='{{ link.itemid }}' title='{{ 'Import links'|trans }}'>
+                      <a data-action='import-links' data-target='{{ link.itemid }}' title='{{ 'Import links'|trans }}'>
                         <i class='fas fa-arrows-down-to-line'></i>
                       </a>
                       <a data-action='import-link-body' data-endpoint='items' data-target='{{ link.itemid }}' title='{{ 'Import'|trans }}'>
