--- a/src/templates/upload-dropdown-menu.html
+++ b/src/templates/upload-dropdown-menu.html
@@ -18,14 +18,16 @@
       <a class='dropdown-item' data-action='insert-plain-text' data-storage='{{ upload.storage }}' data-path='{{ upload.long_name }}'>
         <i class='fas fa-fw fa-file-import mr-1'></i>{{ 'Insert in text at cursor position'|trans }}</a>
     {% endif %}
+  {% endif %}
 
-    <!-- Edit filename -->
+    <!-- Edit filename (available in view mode too) -->
     {% if not upload.immutable %}
       <a class='dropdown-item' data-action='rename-upload' data-id='{{ upload.id }}' data-type='{{ upload.type }}'
         data-itemid='{{ upload.item_id }}' data-msg='{{ 'Edit filename'|trans }}' title='{{ 'Edit filename'|trans }}'>
         <i class='fas fa-fw fa-pencil-alt mr-1'></i>{{ 'Edit filename'|trans }}</a>
     {% endif %}
 
+  {% if mode == 'edit' %}
 
     <!-- Annotate image -->
     {% if ext matches '/(jpg|jpeg|png|gif)$/i' %}
@@ -70,7 +72,7 @@
     <a class='dropdown-item' data-action='more-info-upload' data-uploadid='{{ upload.id }}'>
       <i class='fas fa-fw fa-info-circle mr-1'></i>{{ 'More information'|trans }}</a>
 
-  {% if mode == 'edit' and not upload.immutable %}
+  {% if not upload.immutable %}
     <!-- DESTROY -->
     <div class='dropdown-divider'></div>
     <a class='dropdown-item hover-danger' data-action='destroy-upload' data-uploadid='{{ upload.id }}'>
