--- a/src/templates/upload-dropdown-menu.html
+++ b/src/templates/upload-dropdown-menu.html
@@ -21,7 +21,7 @@
   {% endif %}
 
     <!-- Edit filename (available in view mode too) -->
-    {% if not upload.immutable %}
+    {% if not upload.immutable and not Entity.isReadOnly %}
       <a class='dropdown-item' data-action='rename-upload' data-id='{{ upload.id }}' data-type='{{ upload.type }}'
         data-itemid='{{ upload.item_id }}' data-msg='{{ 'Edit filename'|trans }}' title='{{ 'Edit filename'|trans }}'>
         <i class='fas fa-fw fa-pencil-alt mr-1'></i>{{ 'Edit filename'|trans }}</a>
@@ -72,7 +72,7 @@
     <a class='dropdown-item' data-action='more-info-upload' data-uploadid='{{ upload.id }}'>
       <i class='fas fa-fw fa-info-circle mr-1'></i>{{ 'More information'|trans }}</a>
 
-  {% if not upload.immutable %}
+  {% if not upload.immutable and not Entity.isReadOnly %}
     <!-- DESTROY -->
     <div class='dropdown-divider'></div>
     <a class='dropdown-item hover-danger' data-action='destroy-upload' data-uploadid='{{ upload.id }}'>
