--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -137,7 +137,9 @@
 <div data-save-hidden='metadataDiv' class='col-md-6 mt-4'>
   {# this div is filled in JS by Metadata.class.ts edit() #}
   <div id='metadataDiv'></div>
-  <button type='button' data-action='toggle-modal' data-target='fieldBuilderModal' class='btn btn-secondary mt-3 row'>{{ 'Add field'|trans }}</button>
+  <div class='mt-3 row'>
+    <button type='button' data-action='toggle-modal' data-target='fieldBuilderModal' class='btn btn-secondary'>{{ 'Add field'|trans }}</button>
+  </div>
 </div>
 <hr>
 
