--- a/src/templates/show-item.html
+++ b/src/templates/show-item.html
@@ -106,7 +106,7 @@
       </div>
       <div class='ml-auto'>
         {# toggle body #}
-        <span class='p-1 rounded hl-hover-gray' data-type='{{ Entity.type }}' data-id='{{ item.id }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}'>
+        <span class='p-1 rounded hl-hover-gray' data-type='{{ Entity.type }}' data-id='{{ item.id }}' data-toggle-plus-icon='1' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}'>
           <i class='fas fa-square-plus fa-fw'></i>
         </span>
       </div>
