fix incorrect string in admin menu

--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -110,7 +110,7 @@
 
     {% include 'binary-setting.html' with {'model': model, 'src': src,
       'slug': 'do_force_canwrite',
-      'label': 'Enforce write permissions?|trans',
+      'label': 'Enforce write permissions?'|trans,
       'help': 'Select if you want to enforce write permissions on experiments'|trans} %}
 
     <div class='d-flex justify-content-between'>
