fix issue with newly added step not being editable
because mutation observer was not triggered
also remove save on blur
and make the add button work

--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -78,12 +78,12 @@
           </div>
         {% endfor %}
       </div>
-      <!-- Add step input -->
-      <div class='input-group mt-4'>
-          <input aria-label='{{ 'Add a step'|trans }}' type='text' size='60' class='form-control stepinput' data-id='{{ Entity.id }}' />
-          <div class='input-group-append'>
-            <button class='btn btn-primary' type='submit'>{{ 'Add a step'|trans }}</button>
-          </div>
+    </div>
+    {# Add step input #}
+    <div class='input-group mt-4'>
+      <input aria-label='{{ 'Add a step'|trans }}' type='text' size='60' class='form-control stepinput' data-id='{{ Entity.id }}' />
+      <div class='input-group-append'>
+        <button class='btn btn-primary' data-action='create-step' type='submit'>{{ 'Add a step'|trans }}</button>
       </div>
     </div>
   </section>
