--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -330,6 +330,9 @@
       </div>
 
       <div id='metadataDiv' class='col-md-6'></div>
+      <div class='mt-3 row'>
+        <button type='button' data-action='toggle-modal' data-target='fieldBuilderModal' class='btn btn-secondary'>{{ 'Add field'|trans }}</button>
+      </div>
       {% set mode = 'edit-template' %}
       {% include 'steps-links-edit.html' %}
       <!-- METADATA editor for items types -->
