[DATALAD RUNCMD] run codespell throughout
=== Do not change lines below ===
{
 "chain": [],
 "cmd": "codespell -w",
 "exit": 0,
 "extra_inputs": [],
 "inputs": [],
 "outputs": [],
 "pwd": "."
}
^^^ Do not change lines above ^^^

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -3,7 +3,7 @@
   {%- include 'head.html' -%}
   {# TITLE #}
   {%- block title -%}
-    {# this can be overriden by child templates #}
+    {# this can be overridden by child templates #}
     <h1 id='pageTitle' {%- if hideTitle -%}hidden{%endif%}>{{ App.pageTitle }}</h1>
   {%- endblock -%}
 
