fix bug with permissions modal for templates on ucp. fix #4333

--- a/src/templates/view-permissions-details.html
+++ b/src/templates/view-permissions-details.html
@@ -1,5 +1,5 @@
-{# only display the html for permissions. Required vars: "can" from canToHuman filter on a permissions json  #}
-<div id='{{ rw }}Div'>
+{# only display the html for permissions. Required vars: "can" from canToHuman filter on a permissions json and identifier  #}
+<div id='{{ identifier|default(rw) }}Div'>
   {{ can.base }}
   {% if can.teams %}
     <details><summary>{{ 'Teams'|trans }}</summary>
