--- a/src/templates/permissions-edit-modal.html
+++ b/src/templates/permissions-edit-modal.html
@@ -1,25 +1,27 @@
 {# required vars: rw visibilityArr teamsArr myTeamgroupsArr usersArr #}
-{% if ucpPage %}{# set this to true on ucp page #}
+{% if ucpPage %}{# set this to true on ucp page for default permissions #}
   {% set column = rw == 'canread' ? 'default_read' : 'default_write' %}
   {% set permissionsJson = App.Users.userData[column] %}
+  {% set identifier = rw ~ 'defaultPermissions' %}
 {% else %}
+  {% set identifier = rw %}
   {% set permissionsJson = Entity.entityData[rw] %}
 {% endif %}
 <!-- Modal for permission edit -->
-<div class='modal fade' id='permModal-{{ rw }}' tabindex='-1' role='dialog' aria-labelledby='permModalLabel_{{ rw }}' aria-hidden='true'>
+<div class='modal fade' id='permModal-{{ identifier }}' tabindex='-1' role='dialog' aria-labelledby='permModalLabel_{{ identifier }}' aria-hidden='true'>
   <div class='modal-dialog modal-lg' role='document'>
     <div class='modal-content'>
       <div class='modal-header'>
-        <h5 class='modal-title' id='permModalLabel_{{ rw }}'><i class='fas fa-fw fa-{{ rw == 'canread' ? 'eye' : 'pencil-alt' }}'></i> {{ rw == 'canread' ? 'Select who can see this entry'|trans : 'Select who can edit this entry'|trans }}</h5>
+        <h5 class='modal-title' id='permModalLabel_{{ identifier }}'><i class='fas fa-fw fa-{{ rw == 'canread' ? 'eye' : 'pencil-alt' }}'></i> {{ rw == 'canread' ? 'Select who can see this entry'|trans : 'Select who can edit this entry'|trans }}</h5>
         <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
           <span aria-hidden='true'>&times;</span>
         </button>
       </div>
       <div class='modal-body'>
         <div data-rw={{ rw }}>
-          <label for='{{ rw }}_select_base'>{{ 'Base'|trans }}</label>
+          <label for='{{ identifier }}_select_base'>{{ 'Base'|trans }}</label>
           <p class='smallgray'>{{ 'This setting sets a baseline upon which you can add more permissions by selecting teams, teamgroups or users below.'|trans }}</p>
-          <select id='{{ rw }}_select_base' class='form-control'>
+          <select id='{{ identifier }}_select_base' class='form-control'>
             {% for key, value in visibilityArr %}
               <option value='{{ key }}'
               {{ permissionsJson|extractJson('base') == key ? ' selected' }}
@@ -27,9 +29,9 @@
             {% endfor %}
           </select>
           <!-- TEAMS -->
-          <label for='{{ rw }}_select_teams'>{{ 'Teams'|trans }}</label> <p class='smallgray d-inline'>{{ '(hold %sctrl%s key to select multiple entries)'|trans|format('<kbd>', '</kbd>')|raw }}</p>
+          <label for='{{ identifier }}_select_teams'>{{ 'Teams'|trans }}</label> <p class='smallgray d-inline'>{{ '(hold %sctrl%s key to select multiple entries)'|trans|format('<kbd>', '</kbd>')|raw }}</p>
           <p class='smallgray'>{{ 'Selecting a team here will give access to all members of this team.'|trans }}</p>
-          <select id='{{ rw }}_select_teams' multiple class='form-control' autocomplete='off'>
+          <select id='{{ identifier }}_select_teams' multiple class='form-control' autocomplete='off'>
             {% for team in teamsArr|filter(t => t.visible == '1') %}
               <option value='team:{{ team.id }}'
               {{ permissionsJson|isInJsonArray('teams', team.id) ? ' selected' }}
@@ -37,9 +39,9 @@
             {% endfor %}
           </select>
           <!-- TEAMGROUPS -->
-          <label for='{{ rw }}_select_teamgroups'>{{ 'Teamgroups'|trans }}</label> <p class='smallgray d-inline'>{{ '(hold %sctrl%s key to select multiple entries)'|trans|format('<kbd>', '</kbd>')|raw }}</p>
+          <label for='{{ identifier }}_select_teamgroups'>{{ 'Teamgroups'|trans }}</label> <p class='smallgray d-inline'>{{ '(hold %sctrl%s key to select multiple entries)'|trans|format('<kbd>', '</kbd>')|raw }}</p>
           <p class='smallgray'>{{ 'Selecting a teamgroup here will give access to all users part of this teamgroup.'|trans }}{{ myTeamgroupsArr|length == 0 ? ' ' ~ 'You do not belong to any teamgroup.'|trans }}</p>
-          <select {{ myTeamgroupsArr|length == 0 ? 'disabled' }} id='{{ rw }}_select_teamgroups' multiple class='form-control' autocomplete='off'>
+          <select {{ myTeamgroupsArr|length == 0 ? 'disabled' }} id='{{ identifier }}_select_teamgroups' multiple class='form-control' autocomplete='off'>
             {% for tg in myTeamgroupsArr %}
               <option value='teamgroup:{{ tg.id }}'
               {{ permissionsJson|isInJsonArray('teamgroups', tg.id) == ('teamgroup:' ~ tg.id) ? ' selected' }}
@@ -47,8 +49,8 @@
             {% endfor %}
           </select>
           <!-- USERS -->
-          <label for='{{ rw }}_select_users'>{{ 'Users'|trans }}</label> <p class='smallgray d-inline'>{{ 'Allow individual users to access this entry.'|trans }}</p>
-          <ul class='list-group mb-1' id='{{ rw }}_list_users'>
+          <label for='{{ identifier }}_select_users'>{{ 'Users'|trans }}</label> <p class='smallgray d-inline'>{{ 'Allow individual users to access this entry.'|trans }}</p>
+          <ul class='list-group mb-1' id='{{ identifier }}_list_users'>
             {% set humanCan = permissionsJson|canToHuman %}
             {% for user in humanCan.users %}
               <li class='list-group-item w-100' data-id='{{ user.userid }}'>
@@ -57,10 +59,10 @@
             {% endfor %}
           </ul>
           <!-- add user to permissions input -->
-          <div id='autocompleteUsersDiv{{ rw }}' class='input-group'>
-            <input id='{{ rw }}_select_users' data-rw='{{ rw }}' class='form-control autocompleteUsers autocompleteUsersPermissions' placeholder='{{ 'Add user'|trans }}' autocomplete='off'>
+          <div id='autocompleteUsersDiv{{ identifier }}' class='input-group'>
+            <input id='{{ identifier }}_select_users' data-identifier='{{ identifier }}' class='form-control autocompleteUsers autocompleteUsersPermissions' placeholder='{{ 'Add user'|trans }}' autocomplete='off'>
             <div class='input-group-append'>
-              <button class='btn btn-primary' data-rw='{{ rw }}' data-action='add-user-to-permissions'>{{ 'Add'|trans }}</button>
+              <button class='btn btn-primary' data-rw='{{ rw }}' data-identifier='{{ identifier }}' data-action='add-user-to-permissions'>{{ 'Add'|trans }}</button>
             </div>
           </div>
         </div>
@@ -83,7 +85,7 @@
       </div>
       <div class='modal-footer'>
         <button type='button' class='btn btn-secondary' data-dismiss='modal'>{{ 'Close'|trans }}</button>
-        <button type='button' class='btn btn-primary' data-dismiss='modal' data-rw={{ rw }} data-action='save-permissions'>{{ 'Save'|trans }}</button>
+        <button type='button' class='btn btn-primary' data-dismiss='modal' data-identifier='{{ identifier }}' data-rw='{{ rw }}' {{ ucpPage ? 'data-is-user-default="1"' }} data-action='save-permissions'>{{ 'Save'|trans }}</button>
       </div>
     </div>
   </div>
