--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -226,13 +226,12 @@
 
     <div class='d-flex justify-content-between'>
       <label for='default-read-select' class='col-form-label'>{{ 'Default visibility for new experiments'|trans }}</label>
-      <div id='default_readDiv'>
+      <div>
         {% set rw = 'canread' %}
         {% set can = App.Users.userData.default_read|canToHuman %}
-        {% include('view-permissions-details.html') %}
-        {% set ucpPage = true %}
-        {% include('permissions-edit-modal.html') %}
-        <div data-action='toggle-modal' data-target='permModal-{{ rw }}'>
+        {{ include('view-permissions-details.html', {identifier: 'canreaddefaultPermissions'}) }}
+        {{ include('permissions-edit-modal.html', {ucpPage: true}) }}
+        <div data-action='toggle-modal' data-target='permModal-{{ rw }}defaultPermissions'>
           <i class='fas fa-fw fa-square-plus fa-2x'></i>
         </div>
       </div>
@@ -241,13 +240,12 @@
 
     <div class='d-flex justify-content-between'>
       <label for='default-write-select' class='col-form-label'>{{ 'Default write permission for new experiments'|trans }}</label>
-      <div id='default_writeDiv'>
+      <div>
         {% set rw = 'canwrite' %}
         {% set can = App.Users.userData.default_write|canToHuman %}
-        {% include('view-permissions-details.html') %}
-        {% set ucpPage = true %}
-        {% include('permissions-edit-modal.html') %}
-        <div data-action='toggle-modal' data-target='permModal-{{ rw }}'>
+        {{ include('view-permissions-details.html', {identifier: 'canwritedefaultPermissions'}) }}
+        {{ include('permissions-edit-modal.html', {ucpPage: true}) }}
+        <div data-action='toggle-modal' data-target='permModal-{{ rw }}defaultPermissions'>
           <i class='fas fa-fw fa-square-plus fa-2x'></i>
         </div>
       </div>
