make the date and owner columns in table mode stay on one line

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -360,6 +360,11 @@ button:disabled {
         font-size: 100%;
     }
 
+    .item-date,
+    .item-owner {
+        white-space: nowrap;
+    }
+
     .item-next {
         max-width: 14ch;
         overflow: hidden;
