fix reset password not showing up in edit users from sysconfig page

--- a/src/templates/editusers.html
+++ b/src/templates/editusers.html
@@ -154,7 +154,7 @@
                 </td>
                 <td>{% if user.mfa_secret %}<span title='{{ '2FA enabled'|trans }}'><i title='{{ '2FA enabled'|trans }}' class='fas fa-user-shield'></i></span>{% endif %}</td>
                 <td>
-                  {% if App.Users.userData.usergroup == '1' %}
+                  {% if App.Users.userData.is_sysadmin == '1' %}
                     <div class='clickable p-2 hl-hover-gray text-center rounded' title='{{ 'Reset user password'|trans }}' data-action='toggle-next' data-target='resetPasswordModal'>
                       <i class='fas fa-fw fa-key mr-1'></i>
                     </div>
